fix system24 theme gaps

--- a/global/home/system24-vencord.theme.css
+++ b/global/home/system24-vencord.theme.css
@@ -192,11 +192,11 @@ body {
 }
 
 .visual-refresh {
-	.page_c48ade {
+	.page__5e434 {
 		padding-bottom: 0;
 		padding-right: 0;
 	}
-	.sidebar_c48ade {
+	.sidebar__5e434 {
 		margin-bottom: 0;
 		margin-left: 0;
 	}
